@@ -1,3 +1,7 @@
+2009-06-23  Jonathan Pryor  <jpryor@novell.com>
+
+	* IEnumerableTest.cs: Add tests for .ContiguousSubsequences().
+
 2009-06-11  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerableTest.cs: Add tests for .ToReadOnlyDictionary().
